# GPU-Video-Processing-Library-with-SYCL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: coderoadmap.txt
include/: VPL.hpp  Video.hpp  Vidoe.hpp  common.hpp
src/: VPL.cpp  Video.cpp  grey_out.cpp
